Detail: Fix tab collapse

--- a/public/details/widgets/widgets.style.css
+++ b/public/details/widgets/widgets.style.css
@@ -16,7 +16,9 @@
 	background-color: transparent !important;
 	border-color: transparent transparent #DDD !important;
 }
-.widget-line .tab-pane:not(:empty) { /* .widget-line .tab-pane:not(:last-of-type) */
+/* .widget-line .tab-pane:not(:last-of-type) */
+/* .widget-line .tab-pane:not(:empty) */
+.widget-line .tab-pane:not(:nth-of-type(3)) {
 	padding: 10px;
 	background-color: #F9F9F9;
 	border-bottom: 1px solid #DDD;
